--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<body>
 		<h1 class="title">Socios</h1>
 		<div id="update">
+			<h2 class="title">Update</h2>
 			<div id="btn"></div>
 			<div id="newMsgs"></div>
 		</div>
