Added 'navbar' and message icon

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
 		<link rel="stylesheet" type="text/css" href="style.css" title="style"/>
 	</head>
 	<body>
-		<h1 class="title">Socios</h1>
+		<header class="navbar-inverse">
+			<h1 class="title">Socios</h1>
+			<a href="#"><img class="icon" id="btn" src="img/msg_icon.png"></a>
+		</header>
 		<div class="container">
 			<div id="main"  class="row">
 				<div class="timeline col-md-4">
@@ -27,7 +30,6 @@
 				</div>
 				<div id="update" class="col-md-4">
 					<h2 class="title">Update</h2>
-					<div id="btn"></div>
 					<div id="newMsgs"></div>
 				</div>
 			</div>
